2004-08-30  Mark McLoughlin  <mark@skynet.ie>

	Patch from Josselin Mouette <joss@debian.org> in bug #148028

	* gconf/gconfd.c: (periodic_cleanup_timeout): save and reload
	~/.gconfd/saved_state so we don't drop listeners when reloading
	the database.

2004-08-27  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconftool.c: (process_locale_info): don't explicitly
	install the global default in a schema for every locale since
	we happily fall back to the C locale anyway. Fixes bug #131488.

2004-08-25  Mark McLoughlin  <mark@skynet.ie>

	* backends/markup-tree.c: (markup_entry_get_value): don't
	abort if we find no local schema to match any locales - there
	may not be a "C" local schema at all. See bug #147522 for a
	test case from Caio Begotti <caio1982@gmail.com >

2004-08-19  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.7.92.

==================== 2.7.91.1 ====================

2004-08-19  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.7.91.1.

2004-08-19  Mark McLoughlin  <mark@skynet.ie>

	Revert the patch to make use of the merge-subtree feature at
	specific points in the tree. Not clear that it solves the
	problems we thought it solved. Patch archived in bug #138498

	* backends/markup-tree.[ch]:
	(markup_tree_get): remove try_merge flag.
	(markup_dir_sync): don't try and save as a merged subtree.
	
	* backends/markup-backend.c: (resolve_address), (ms_new):
	Remove the "nomerge" backend flag.
	
	* backends/gconf-merge-tree.c:
	(recursively_load_subtree): add back.
	(merge_tree): upd. for markup_tree_get() change.

2004-08-16  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "bs" to ALL_LINGUAS.

2004-08-16  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.7.92.

==================== 2.7.91 ====================

2004-08-16  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.7.91.

2004-08-11  Kjartan Maraas  <kmaraas@gnome.org>
